--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: rail
 
 on:
   push:
-    branches: [ master ]
+    branches: [ u/sschmidt23/deep2degrade ]
   pull_request:
     branches: [ master ]
 
